--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
 html, body{
-    height: 100%;
+    height: 100vh;
     margin:0;
+    background:url("../images/bokeh-large-background-1680-1050.png");
+    
+}
+.navbar{
+    background-color: black;
 }
 li{
     border-right:1px solid #cccccc;
     padding: 10px;
     display: inline;
     padding-left: 16px;
-    float: left;
+  
 }
 
 li:last-child{
@@ -15,21 +20,33 @@ li:last-child{
 }
 
 .outer-container{
-    min-height: 100%;
+    /* min-height: 100%; */
+    
 }
 
 .container{
-    padding: 20px;
-    padding-bottom: 50px;
+    /* padding: 30px;
+    padding-bottom: 50px; */
+    min-height:90vh;
     
 }
 .card{
     margin-top: 10%;
     margin-left: 5%;
+    width:70%;
+    height:250px;
+   
     
 }
+img{
+    width:30%;
+    margin-top: 10%;
+    height:40% ;
 
-.footer {
+}
+
+footer {
     height: 50px;
-    margin-top: -50px;
+    margin-top: -40px;
+    background-color: black;
   }
