--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,52 +1,143 @@
-html, body{
-    height: 100vh;
-    margin:0;
-    background:url("../images/bokeh-large-background-1680-1050.png");
+
+body {
+    font-family: "Lato", sans-serif;
+    transition: background-color .5s;
+  }
+  
+  .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color:#fff ;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #ffb3b3;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #8c8c8c;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+
+.masthead{
+    min-height: 20rem;
+    background: url("/assets/images/profile.jpeg");
+    position: relative;
+    display: table;
+    width:100%;
+    padding-top: 20rem;
+    padding-bottom: 5rem;
+    margin-top:-5vh !important;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#logo{
+    color:white;
+    font-family: "Dancing Script", "cursive";
+    font-size: 400% !important;
+    margin-top:5vh;
     
 }
-.navbar{
-    background-color: black;
+.masthead div{
+    color: white;
+    font-family:"archivo", "sans-serif";
+    font-size: 150%;
+    padding-bottom:5rem;
 }
-li{
-    border-right:1px solid #cccccc;
-    padding: 10px;
-    display: inline;
-    padding-left: 16px;
+.nameTitle{
+  margin-bottom: 50vh;
+  margin-left:30vh;
+}
+
+#burger{
+  color:#8c8c8c !important;
+  
+  margin-left:3vw;
+  margin-top:7vh ;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+
+}
+.burgerBck{
+background-color: whitesmoke;
+width: 10vw;
+z-index:500;
+}
+.skills{
+  margin:0 auto;
+  margin-top:8vh;
+  margin-bottom:8vh;
+  color:#ffb3b3;
   
 }
+.skillsIcons{
+  margin-bottom: 1.5vh;
+  background-color: #ffb3b3;
+  color:white;
+  
+}
+.icons{
+  margin: 0 auto;
+  margin-bottom: 2vh;
+  width:100px;
+  height:100px;
+  border: 2px solid #ffb3b3;
+  background-color:#ffb3b3 ;
+  padding: 20px;
+  border-radius: 50%;
+}
+.skillsInfo{
+  color:#8c8c8c
+}
+.learnMore button{
+  margin-top:10vh;
+  margin-bottom: 5vh;
+  background-color:#ffb3b3; 
+}
+.learnMore button:hover{
+  background-color: #b3ffff;
+  color:#8c8c8c;
+}
+#contact{
+  background-image: url("/assets/images/pink.jpg");
+  background-repeat: no-repeat;
+    background-size: cover;
+  
+}
+.contactMe h2{
+  color:white;
+  margin-top: 20vh;
+ 
 
-li:last-child{
-    border-right:none;
 }
 
-.outer-container{
-    /* min-height: 100%; */
-    
+.clickMe button{
+  margin-top: 15vh;
+  background-color: #004d99;
 }
 
-.container{
-    /* padding: 30px;
-    padding-bottom: 50px; */
-    min-height:90vh;
-    
+.clickMe button:hover{
+  background-color: #66c2ff;
 }
-.card{
-    margin-top: 10%;
-    margin-left: 5%;
-    width:70%;
-    height:250px;
-   
-    
-}
-img{
-    width:30%;
-    margin-top: 10%;
-    height:40% ;
-
-}
-
-footer {
-    height: 50px;
-    margin-top: -40px;
-    background-color: black;
-  }
